[project]
name = "xircuits-component-library-template"
version = "0.1.0"
description = "A brief description of your component library"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/yourrepo/your-library"
keywords = ["xircuits", "machine learning", "database", "data processing", "xircuits"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/example.xircuits"
requirements_path = "requirements.txt"