[project]
name = "xai-xgboost"
version = "0.1.0"
description = "A Xircuits component library for XGBoost!"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-xgboost"
keywords = ["xircuits", "machine learning", "xgboost"]

dependencies = [
    "xgboost==2.1.1",
    "scikit-learn"
]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/XGBoostClassifier.xircuits"
requirements_path = "requirements.txt"
